--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,14 +6,10 @@ name: Node.js CI/CD
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     strategy:
       matrix:
         node-version: [18.x]
